cmake_minimum_required(VERSION 3.15)
project(LuoGu)

set(CMAKE_CXX_STANDARD 11)

add_executable(LuoGu main.cpp)
add_executable(P5703 P5703.cpp)
add_executable(P5704 P5704.cpp)
add_executable(P5705 P5705.cpp)
add_executable(P5706 P5706.cpp)
add_executable(P1425 P1425.cpp)
add_executable(P2433 P2433.cpp)
add_executable(P5708 P5708.cpp)
add_executable(P1421 P1421.cpp)
add_executable(P5709 P5709.cpp)
add_executable(P2181 P2181.cpp)
add_executable(P5710 P5710.cpp)
add_executable(P5711 P5711.cpp)
add_executable(P5712 P5712.cpp)
add_executable(P5713 P5713.cpp)
add_executable(P5714 P5714.cpp)
add_executable(P5715 P5715.cpp)
add_executable(P5716 P5716.cpp)
add_executable(P1085 P1085.cpp)
add_executable(P1909 P1909.cpp)
add_executable(P1055 P1055.cpp)
add_executable(P1422 P1422.cpp)
add_executable(P1424 P1424.cpp)
add_executable(P1888 P1888.cpp)
add_executable(P1046 P1046.cpp)
add_executable(P5717 P5717.cpp)
add_executable(P4414 P4414.cpp)
add_executable(P5718 P5718.cpp)
add_executable(P5719 P5719.cpp)
add_executable(P5720 P5720.cpp)
add_executable(P5721 P5721.cpp)
add_executable(P1009 P1009X.cpp)
add_executable(P1980 P1980.cpp)
add_executable(P1035 P1035.cpp)
add_executable(P2669 P2669.cpp)
add_executable(P5722 P5722.cpp)
add_executable(P5723 P5723.cpp)
add_executable(P1217 P1217.cpp)
add_executable(P1423 P1423.cpp)
add_executable(P1307 P1307.cpp)
add_executable(P1720 P1720.cpp)
add_executable(P5724 P5724.cpp)
add_executable(P1420 P1420.cpp)
add_executable(P1075 P1075.cpp)